--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -13,10 +15,12 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-form-stepper": "^2.0.3",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "simplelightbox": "^2.14.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
