--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.15.1",
     "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-form-stepper": "^2.0.3",
+    "react-images-uploading": "^3.1.7",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "simplelightbox": "^2.14.2",
