--- a/package.json
+++ b/package.json
@@ -8,19 +8,24 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.6",
+    "@react-pdf/renderer": "^3.3.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.15.1",
     "axios": "^1.6.5",
+    "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-form-stepper": "^2.0.3",
     "react-images-uploading": "^3.1.7",
+    "react-pdf": "^7.7.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-share": "^5.1.0",
     "react-social": "^1.10.0",
+    "react-to-pdf": "^1.0.1",
     "simplelightbox": "^2.14.2",
     "web-vitals": "^2.1.4",
     "wowjs": "^1.1.3"
