--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-social": "^1.10.0",
     "react-to-pdf": "^1.0.1",
     "simplelightbox": "^2.14.2",
+    "sweetalert2": "^11.10.6",
     "web-vitals": "^2.1.4",
     "wowjs": "^1.1.3"
   },
