--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "react-dom": "^18.2.0",
     "react-form-stepper": "^2.0.3",
     "react-images-uploading": "^3.1.7",
+    "react-input-emoji": "^5.6.6",
     "react-pdf": "^7.7.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-share": "^5.1.0",
     "react-social": "^1.10.0",
+    "react-textarea-autosize": "^8.5.3",
     "react-to-pdf": "^1.0.1",
     "simplelightbox": "^2.14.2",
     "sweetalert2": "^11.10.6",
