--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react-scripts": "5.0.1",
     "react-share": "^5.1.0",
     "react-social": "^1.10.0",
+    "react-tabs": "^6.0.2",
     "react-textarea-autosize": "^8.5.3",
     "react-to-pdf": "^1.0.1",
+    "react-toastify": "^10.0.5",
     "simplelightbox": "^2.14.2",
     "sweetalert2": "^11.10.6",
     "web-vitals": "^2.1.4",
